--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,3 +28,5 @@ serde_json = "1"
 app_dirs2 = "2.5.5"
 chrono = { version = "0.4.41", features = ["serde"] }
 chrono-tz = "0.10.4"
+libc = "0.2"
+once_cell = "1.19"
